Scrollbar seems to be not clickable on details page Fixes #23

--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
-html, body, #root {
-  padding: 0px;
-  margin: 0px;
+html,
+body,
+#root {
+    padding: 0px;
+    margin: 0px;
 
-  height: 100vh;
-  width: 100vw;
+    width: 100vw;
 
-  overflow-x: hidden;
+    overflow-x: hidden;
 
-  background-color: #f4f6f8;
+    background-color: #f4f6f8;
 }
